# LightRAG-PLM

./: .dockerignore  .env.xh  .gitignore  Dockerfile  Dockerfile_bk  Dockerfile_bk2  docker-compose.yml  entrypoint.sh  pyproject.toml  实习答辩prompt.txt  胡佩文7月_1.docx
assets/database/: sql.sql
assets/files_parse_output/BOM审核申请/: BOM审核申请.html
assets/mineru_parse_result/: content_list.html  flowchar.md  qwen2.5_72B_instruct_image.md  ═╦╩╨╔ъ╟ы V2.0_content_list.json
assets/plm_docx/: BOM 审核申请.docx  BOM审核申请.json
docker/: milvus-standalone-docker-compose.yml  postgres-pgvector-age-docer-compose.yml
examples/dockers_test/: milvus_minio_test.py  milvus_test.py  minio_test.py  pg_vector_test.py  postgres_test.py
examples/func_test/: func_test.py  rule_test.py
examples/parsers_test/python_docx_test/: docx_parser.py  docx_python_docx_parser.py  extract_docx_with_content.py
examples/parsers_test/unstructured_test/: docx_unstructured_parser.py  docx_unstructured_parser_image.py  nltk_data_path.txt  (+3 more)
experiment/vector_db/: base_vdb_con.py
lightrag/: chunk.py  lightrag.py  operate.py  prompt.py  prompt_ch.py  utils.py
plm/: main.py
plm/api/: fast_api.py  files_upload.py  rag_qa.py  router.py
plm/cli/: client.py  files_upload.py
plm/conf/: config.py  settings.py
plm/core/: common.py  rag.py
plm/deepdoc/: docx2html.py  docx_parser.py  html2chunk.py  ragflow_docx_parser.py
plm/models/: __init__.py
plm/utils/: __init__.py  config_reader.py  exception_utils.py  model_utils.py  process_pipeline.py  schema.py
tests/test_api/: http-client.env.json  request.http
(+36 files in other folders)
